# prj_cap

./: .gitignore  README.md  pyproject.toml
docs/: architecture-review.md
extension/: background.js  manifest.json  popup.css  popup.html  popup.js  review.css  review.html  timeline.css  timeline.html  timeline.js
extension/review/: app.js
extension/shared/: base.css  colors.js  date-utils.js  message-builder.js  storage.js
extension/timeline/: app.js  date-nav.js  drag-drop.js  modal.js  project-modal.js  render.js  state.js  ui.js  voice.js
src/prjcap/: browser_launcher.py  cli.py  config.py  db.py  message_builder.py  models.py  whisper_client.py
